--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "add": "^2.0.6",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
