--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "add": "^2.0.6",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.5.1",
     "marked": "^1.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
